<resources>
    <!--app-->
    <string name="app_name">Takana</string>
    <string name="app_title">Takana: Your Wise Expense</string>
    <string name="app_version">Version 1.0</string>

    <!--login-->
    <string name="selamat_datang">Selamat Datang!</string>
    <string name="silahkan_masuk_ya_jangan_lupa_lepas_alas_kaki">Silahkan masuk dulu ya,\njangan lupa lepas alas kaki</string>
    <string name="username">Username</string>
    <string name="kata_sandi">Kata Sandi</string>
    <string name="masuk">Masuk</string>
    <string name="lupa_kata_sandi">Lupa Kata Sandi?</string>
    <string name="belum_punya_akun_ya">Belum punya akun, ya?</string>
    <string name="daftar_disini_yuk">Daftar disini yuk!</string>

    <!--register-->
    <string name="buat_akun">Buat Akun!</string>
    <string name="kita_buat_akun_dulu_ya_nkalo_buat_gudeg_bahannya_belum_dibeli">Kita buat akun dulu ya,\nkalo buat gudeg bahannya belum dibeli</string>
    <string name="email">Email</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="nomor_telepon">Nomor Telepon</string>
    <string name="domisili">Domisili</string>
    <string name="jenis_kelamin">Jenis Kelamin</string>
    <string name="daftar">Daftar</string>
    <string name="udah_punya_akun_ya">Udah punya akun, ya?</string>
    <string name="login_disini_yuk">Login disini yuk!</string>

    <!--bottom navigation view menu-->
    <string name="home">HOME</string>
    <string name="transaksi">TRANSAKSI</string>
    <string name="akun_uang">AKUN UANG</string>
    <string name="profil">PROFIL</string>

    <!--home-->
    <string name="halo_user">Halo, %1$s \nyuk bisa yuk ga boros &#128293;</string>

    <!--profile-->
    <string name="username_x">Username: %1$s</string>
    <string name="export_data">&#128229;\t\tExport Data Transaction</string>
    <string name="profile">👤\t\tProfil</string>
    <string name="keluar">👋\t\tKeluar</string>
    <string name="username_kosong">Diisi dulu yuk Usernamenya</string>
    <string name="password_kosong">Diisi dulu yuk Passwordnya</string>
    <string name="add_or_edit_transaction">%1$s Transaksi</string>
    <string name="add_or_edit_money_account">%1$s Akun Uang</string>
    <string name="one_string">%1$s</string>
    <string name="catatan">Catatan</string>
</resources>