<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_color"
    tools:context=".presentation.login.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_16"
        android:background="@drawable/border_around"
        android:elevation="@dimen/width_6"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/padding_14"
        android:paddingVertical="@dimen/padding_20"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/manrope_extrabold"
            android:gravity="center_horizontal"
            android:text="@string/selamat_datang"
            android:textColor="@color/text_color"
            android:textSize="@dimen/textSize_22" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_10"
            android:fontFamily="@font/manrope_regular"
            android:gravity="center_horizontal"
            android:text="@string/silahkan_masuk_ya_jangan_lupa_lepas_alas_kaki"
            android:textColor="@color/text_color" />

        <EditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_32"
            android:background="@drawable/border_edittext"
            android:hint="@string/username"
            android:inputType="text"
            android:paddingVertical="@dimen/padding_12"
            android:paddingStart="@dimen/padding_10" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_14"
            android:background="@drawable/border_edittext"
            android:hint="@string/kata_sandi"
            android:inputType="textPassword"
            android:paddingVertical="@dimen/padding_12"
            android:paddingStart="@dimen/padding_10" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_14"
            android:background="@drawable/border_button"
            android:text="@string/masuk"
            android:textAllCaps="false"
            android:textColor="@drawable/button_text"
            android:textSize="@dimen/textSize_16" />

        <TextView
            android:id="@+id/tv_forgot_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_14"
            android:fontFamily="@font/manrope_bold"
            android:gravity="center_horizontal"
            android:text="@string/lupa_kata_sandi"
            android:textColor="@color/text_color"
            android:textSize="@dimen/textSize_16" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_16"
        android:layout_marginBottom="@dimen/margin_26"
        android:background="@drawable/border_around"
        android:elevation="@dimen/width_6"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/padding_14"
        android:paddingVertical="@dimen/padding_10"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/manrope_regular"
            android:gravity="center_horizontal"
            android:text="@string/belum_punya_akun_ya"
            android:textColor="@color/text_color"
            android:textSize="@dimen/textSize_12" />

        <TextView
            android:id="@+id/btn_cta_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_2"
            android:fontFamily="@font/manrope_extrabold"
            android:gravity="center_horizontal"
            android:text="@string/daftar_disini_yuk"
            android:textColor="@color/main_color"
            android:textSize="@dimen/textSize_20" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>