<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_color"
    android:fillViewport="true"
    android:paddingHorizontal="@dimen/_20sdp"
    tools:context=".presentation.profile.EditProfileActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ProgressBar
            android:id="@+id/pb_loading"
            android:layout_width="@dimen/width_56"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_8"
            android:layout_marginVertical="@dimen/margin_8"
            android:translationZ="@dimen/width_8"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible" />

        <ImageView
            android:id="@+id/iv_user_img"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_100sdp"
            android:background="@drawable/border_image_profile"
            android:src="@drawable/users_1"
            android:layout_marginTop="@dimen/_32sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_change_avatar"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_12sdp"
            android:background="@drawable/border_button_white"
            android:text="Ubah Avatar"
            android:textAllCaps="false"
            android:textColor="@drawable/button_text_white"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_user_img" />

        <EditText
            android:id="@+id/et_full_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_23sdp"
            android:background="@drawable/border_edittext"
            android:hint="@string/nama_lengkap"
            android:inputType="text"
            android:paddingVertical="@dimen/_12sdp"
            android:paddingStart="@dimen/_10sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_change_avatar" />

        <EditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_11sdp"
            android:background="@drawable/border_edittext"
            android:hint="@string/username"
            android:inputType="text|textNoSuggestions"
            android:paddingVertical="@dimen/_12sdp"
            android:paddingStart="@dimen/_10sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_full_name" />

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_11sdp"
            android:background="@drawable/border_edittext"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingVertical="@dimen/_12sdp"
            android:paddingStart="@dimen/_10sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_username" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_11sdp"
            android:background="@drawable/border_edittext"
            android:hint="@string/kata_sandi"
            android:inputType="textPassword"
            android:paddingVertical="@dimen/_12sdp"
            android:paddingStart="@dimen/_10sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_email" />

        <EditText
            android:id="@+id/et_phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_11sdp"
            android:background="@drawable/border_edittext"
            android:hint="@string/nomor_telepon"
            android:inputType="phone"
            android:paddingVertical="@dimen/_12sdp"
            android:paddingStart="@dimen/_10sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_password" />

        <EditText
            android:id="@+id/et_domicile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_11sdp"
            android:background="@drawable/border_edittext"
            android:hint="@string/domisili"
            android:inputType="text|textCapWords"
            android:paddingVertical="@dimen/_12sdp"
            android:paddingStart="@dimen/_10sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_phone_number" />

        <Spinner
            android:id="@+id/spinner_gender_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16sdp"
            android:background="@drawable/border_edittext"
            android:paddingVertical="@dimen/_12sdp"
            android:paddingStart="@dimen/_10sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_domicile" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_update_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_12sdp"
            android:background="@drawable/border_button_white"
            android:text="Perbarui Profile"
            android:textAllCaps="false"
            android:textColor="@drawable/button_text_white"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spinner_gender_type" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_delete_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_12sdp"
            android:layout_marginBottom="@dimen/_50sdp"
            android:background="@drawable/border_button_white"
            android:text="Hapus Profile"
            android:textAllCaps="false"
            android:textColor="@drawable/button_text_white"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_update_profile" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>